# eastmoney-report-scraper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SKILL.md  TODO.md  pyproject.toml  requirements.txt  start_local_app.bat  start_local_app.sh
.github/workflows/: ci.yml
eastmoney_report_scraper/: __init__.py  ai.py  ai_connector.py  analysis.py  cli.py  client.py  config.py  constants.py  dashboard.py  exporters.py  hotspots.py  models.py  parser.py  scoring.py  utils.py
eastmoney_report_scraper/app/: __init__.py  server.py  services.py  tasks.py
eastmoney_report_scraper/app/static/: app.css  app.js
eastmoney_report_scraper/app/templates/: index.html
eastmoney_report_scraper/core/: __init__.py  orchestration.py
eastmoney_report_scraper/exporters/: __init__.py  briefs.py  common.py  coverage.py  indexes.py  markdown.py  range.py
eastmoney_report_scraper/storage/: __init__.py  sqlite.py
scripts/: __init__.py  fetch_reports.py
tests/: test_ai.py  test_cli_modes.py  test_core.py  test_dashboard.py  test_local_app.py  test_parser_fixtures.py
tests/fixtures/: industry_report.html  malformed_page.html  pdf_text_sample.txt  stock_report.html  weak_html.html
